fixed z-index problem on workspace

--- a/knowage/web-content/themes/commons/css/SASS/components/_workspace.scss
+++ b/knowage/web-content/themes/commons/css/SASS/components/_workspace.scss
@@ -537,4 +537,8 @@
 	 	overflow:auto;
 	 	auto-scroll:true;
 	 }
+
+	 md-list-item button.md-button {
+	 	z-index: 10;
+	 }
 }
